<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.android.arunditti.popularmovies.DetailFragment"
    tools:showIn="@layout/activity_detail">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <TextView
                android:id="@+id/detail_error_message_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/error_message"
                android:textSize="@dimen/text_size"
                android:visibility="invisible" />

            <ProgressBar
                android:id="@+id/detail_loading_indicator"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_gravity="center"
                android:visibility="invisible" />

            <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:textAppearance="?android:attr/textAppearanceLarge" />

                        <ImageView
                            android:id="@+id/movie_image_backdrop_path"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/backdrop_image_height"
                            android:fitsSystemWindows="true"
                            android:scaleType="centerCrop" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/movie_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/image_margin" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingTop="32dp">

                            <TextView
                                android:id="@+id/movie_release_date_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_release_date"
                                android:textAppearance="?android:attr/textAppearanceLarge"/>

                            <TextView
                                android:id="@+id/movie_release_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="@dimen/padding"
                                android:textAppearance="?android:attr/textAppearanceSmall"/>

                            <TextView
                                android:id="@+id/movie_rating_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_rating"
                                android:textAppearance="?android:attr/textAppearanceLarge"/>

                            <TextView
                                android:id="@+id/movie_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingBottom="@dimen/padding"
                                android:textAppearance="?android:attr/textAppearanceSmall"/>
                            </LinearLayout>

                        </LinearLayout>

                        <TextView
                            android:id="@+id/movie_overview_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/movie_image"
                            android:text="@string/label_overview"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <TextView
                            android:id="@+id/movie_overview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/movie_overview_label"
                            android:paddingBottom="@dimen/padding"
                            android:textAppearance="?android:attr/textAppearanceSmall"/>

                        <View
                            android:id="@+id/divider_1"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_trailers"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_trailers"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scrollbars="vertical">
                        </android.support.v7.widget.RecyclerView>

                        <View
                            android:id="@+id/divider_2"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>

                        <TextView
                            android:id="@+id/movie_reviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_reviews"
                            android:textAppearance="?android:attr/textAppearanceLarge"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/rv_reviews"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scrollbars="vertical">
                        </android.support.v7.widget.RecyclerView>

                    </LinearLayout>
                </ScrollView>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_margin="@dimen/fab_margin"
                    android:src="@drawable/ic_launcher_foreground"
                    android:text="Save"
                    app:layout_anchorGravity="top|right|end"/>

            </android.support.v7.widget.CardView>

    </android.support.design.widget.CoordinatorLayout>
</layout>